# akonadi

./: .clang-format  .clang-tidy  .clang-tidy-ignore  .codespellrc  .contextProperties.ini  .contextProperties.ini.license  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .krazy  .pre-commit-config.yaml  .reviewboardrc  AUTHORS  AkonadiConfig.cmake.in  AkonadiMacros.cmake  CMakeLists.txt  CMakePresets.json  CTestConfig.cmake  CTestCustom.cmake  ChangeLog  CodingStyle.txt  CollectionDialogMobile.qml  ExtraDesktop.sh  INSTALL  KF5AkonadiConfig.cmake.in  KF5AkonadiMacros.cmake  KF5AkonadiServerConfig.cmake.in  KPimAkonadiConfig.cmake.in  KPimAkonadiMacros.cmake  Mainpage.dox  Makefile.am  Messages.sh  NEWS  README  README-qdoc.md  README.md  README.sqlite  REUSE.toml  actionstatemanager.cpp  (+524 more)
agentserver/: CMakeLists.txt  agentlauncher.cpp  agentpluginloader.cpp  agentpluginloader.h  agentserver.cpp  agentserver.h  agentthread.cpp  agentthread.h  main.cpp  uirunnable.h
asapcat/: CMakeLists.txt  main.cpp  session.cpp  session.h
autotests/: .clang-tidy  CMakeLists.txt  actionstatemanagertest.cpp  agentinstancewidgettest.cpp  attributefactorytest.cpp  attributefactorytest.h  autoincrementtest.cpp  autoincrementtest.h  cachetest.cpp  changerecordertest.cpp  collectionattributetest.cpp  collectionattributetest.h  collectioncopytest.cpp  collectioncreator.cpp  collectiondialog.cpp  collectionjobtest.cpp  collectionjobtest.h  collectionmodifytest.cpp  collectionmovetest.cpp  collectionpathresolvertest.cpp  collectionpathresolvertest.h  collectionsynctest.cpp  collectionutilstest.cpp  entitycachetest.cpp  entitydisplayattributetest.cpp  entitytreemodeltest.cpp  etmpopulationtest.cpp  fakeakonadiservercommand.cpp  fakeakonadiservercommand.h  fakeentitycache.h  fakemonitor.cpp  fakemonitor.h  fakeserverdata.cpp  fakeserverdata.h  fakesession.cpp  fakesession.h  favoriteproxytest.cpp  firstrunner.cpp  gidtest.cpp  gidtest.h  (+61 more)
calendar/: CMakeLists.txt  Messages.sh  TODO  akonadi-calendar_export.h  akonadi-calendarprivate_export.h  akonadicalendar.cpp  akonadicalendar.h  akonadicalendar_p.h  blockalarmsattribute.cpp  blockalarmsattribute.h  calendarbase.cpp  calendarbase.h  calendarbase_p.h  calendarclipboard.cpp  calendarclipboard.h  calendarclipboard_p.h  calendarmodel.cpp  calendarmodel_p.h  calendarsettings.kcfg  calendarsettings.kcfgc  calfilterpartstatusproxymodel_p.cpp  calfilterpartstatusproxymodel_p.h  calfilterproxymodel_p.cpp  calfilterproxymodel_p.h  collectionselection.cpp  collectionselection_p.h  etmcalendar.cpp  etmcalendar.h  etmcalendar_p.h  fetchjobcalendar.cpp  fetchjobcalendar.h  fetchjobcalendar_p.h  freebusydownloadjob_p.cpp  freebusydownloadjob_p.h  freebusymanager.cpp  freebusymanager.h  freebusymanager_p.h  freebusyproviderbase.cpp  freebusyproviderbase.h  freebusyproviderbase_p.h  (+49 more)
components/: CMakeLists.txt  agentinstanceview.cpp  agentinstanceview.h  agenttypeview.cpp  agenttypeview.h  collectioncombobox.h  profileview.cpp
contact/: CMakeLists.txt  Messages.sh  abstractcontacteditorwidget.h  abstractcontacteditorwidget_p.h  abstractcontactformatter.cpp  abstractcontactformatter.h  abstractcontactgroupformatter.cpp  abstractcontactgroupformatter.h  addressbookcombobox.cpp  addressbookcombobox.h  addressbookcombobox_p.h  addressbookselectiondialog.cpp  addressbookselectiondialog.h  akonadi-contact_export.h  akonadi-contactprivate_export.h  akonadi-contactprivate_export.h.in  asyncselectionhandler.cpp  asyncselectionhandler_p.h  attributeregistrar.cpp  autoqpointer_p.h  collectioncombobox.cpp  collectioncombobox.h  collectionfiltermodel.cpp  collectionfiltermodel_p.h  contactcompletionmodel.cpp  contactcompletionmodel_p.h  contactdefaultactions.cpp  contactdefaultactions.h  contacteditor.cpp  contacteditor.h  contacteditordialog.cpp  contacteditordialog.h  contacteditorpageplugin.h  contactgroupeditor.cpp  contactgroupeditor.h  contactgroupeditor.ui  contactgroupeditor_p.h  contactgroupeditordelegate.cpp  contactgroupeditordelegate_p.h  contactgroupeditordialog.cpp  (+63 more)
interfaces/: .kde.Akonadi.AgentManager.xml  CMakeLists.txt  org.freedesktop.Akonadi.Agent.Control.xml  org.freedesktop.Akonadi.Agent.Search.xml  org.freedesktop.Akonadi.Agent.Status.xml  org.freedesktop.Akonadi.AgentManager.xml  org.freedesktop.Akonadi.AgentManagerInternal.xml  org.freedesktop.Akonadi.AgentServer.xml  org.freedesktop.Akonadi.ControlManager.xml  org.freedesktop.Akonadi.MessageSource.xml  org.freedesktop.Akonadi.NotificationManager.xml  org.freedesktop.Akonadi.NotificationSource.xml  org.freedesktop.Akonadi.Preprocessor.xml  org.freedesktop.Akonadi.PreprocessorManager.xml  org.freedesktop.Akonadi.Resource.FreeBusyProvider.xml  org.freedesktop.Akonadi.Resource.Transport.xml  org.freedesktop.Akonadi.Resource.xml  org.freedesktop.Akonadi.ResourceManager.xml  org.freedesktop.Akonadi.Search.xml  org.freedesktop.Akonadi.SearchManager.xml  org.freedesktop.Akonadi.SearchQueryIterator.xml  org.freedesktop.Akonadi.Server.xml  org.freedesktop.Akonadi.StorageDebugger.xml  org.freedesktop.Akonadi.Tracer.xml  org.freedesktop.Akonadi.TracerNotification.xml  org.freedesktop.xesam.Search.xml  org.kde.Akonadi.Agent.Control.xml  org.kde.Akonadi.Agent.Status.xml  org.kde.Akonadi.Agent.xml  org.kde.Akonadi.AgentManager.xml  org.kde.Akonadi.ControlManager.xml  org.kde.Akonadi.NotificationManager.xml  org.kde.Akonadi.ProfileManager.xml  org.kde.Akonadi.Resource.xml  org.kde.Akonadi.Search.Query.xml  org.kde.Akonadi.Search.QueryIterator.xml  org.kde.Akonadi.Search.xml  org.kde.Akonadi.SearchProviderManager.xml  org.kde.Akonadi.SearchQuery.xml  org.kde.Akonadi.SearchQueryIterator.xml  (+3 more)
kabc/: CMakeLists.txt  akonadi-kabc_export.h  contactparts.cpp  contactparts.h
kcal/: CMakeLists.txt  akonadi-kcal_export.h  freebusyproviderbase.cpp  freebusyproviderbase.h  freebusyproviderbase_p.h  incidencemimetypevisitor.cpp  incidencemimetypevisitor.h
kmime/: CMakeLists.txt  Mainpage.dox  Messages.sh  addressattribute.cpp  addressattribute.h  akonadi-kmime_export.h  akonadi-kmimeprivate_export.h.in  (+73 more)
(+2858 files in other folders)
